card alignment fix

--- a/src/Base.css
+++ b/src/Base.css
@@ -196,7 +196,7 @@ h3{ font-family: 'Ubuntu'; }
 }
 .peopleList-2VBrVI .peopleListItem-u6dGxF:hover{
     height: 200px !important;
-    margin: 10px;
+    margin: 8px;
     padding: 8px;
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -212,6 +212,7 @@ h3{ font-family: 'Ubuntu'; }
 .peopleList-2VBrVI .userInfo-2WpsYG{
     flex-direction: column;
     width: 100%;
+    align-items: center;
 }
 .peopleList-2VBrVI .text-3j8t_e{
     margin-top: 10px;
@@ -228,7 +229,8 @@ h3{ font-family: 'Ubuntu'; }
 .peopleList-2VBrVI .avatar-2MSPKk{
   	width: 64px !important;
     height: 64px !important;
-    margin-left: calc(50% - 32px);
+    /* margin-left: calc(50% - 32px); */
+    margin: 4px;
 }
 
 
@@ -269,17 +271,17 @@ h3{ font-family: 'Ubuntu'; }
 
 
 /* fix home page privateChannels status indicator */
-.peopleList-2VBrVI .peopleListItem-u6dGxF .wrapper-1VLyxH[aria-label*="Online"],
+.peopleList-2VBrVI .wrapper-1VLyxH[aria-label*="Online"],
 .privateChannels-oVe7HL .wrapper-1VLyxH[aria-label*="Online"]{
     box-shadow: 0 0 5px 2px var(--status-color-online);
     border-radius: var(--br-avatar);
 }
-.peopleList-2VBrVI .peopleListItem-u6dGxF .wrapper-1VLyxH[aria-label*="Idle"],
+.peopleList-2VBrVI .wrapper-1VLyxH[aria-label*="Idle"],
 .privateChannels-oVe7HL .wrapper-1VLyxH[aria-label*="Idle"]{
     box-shadow: 0 0 5px 2px var(--status-color-idle);
     border-radius: var(--br-avatar);
 }
-.peopleList-2VBrVI .peopleListItem-u6dGxF .wrapper-1VLyxH[aria-label*="Do Not Disturb"],
+.peopleList-2VBrVI .wrapper-1VLyxH[aria-label*="Do Not Disturb"],
 .privateChannels-oVe7HL .wrapper-1VLyxH[aria-label*="Do Not Disturb"]{
     box-shadow: 0 0 5px 2px var(--status-color-dnd);
     border-radius: var(--br-avatar);
